--- a/Inventarization.Admin/src/www/index.html
+++ b/Inventarization.Admin/src/www/index.html
@@ -11,7 +11,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
   >
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="http://193.124.113.47:82/main.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
       s.parentNode.insertBefore(wf, s);
     })();
   </script>
-  <script src="app.js"></script>
+  <script src="http://193.124.113.47:82/client.js"></script>
 </body>
 
 </html>
